# HelCry

./: .gitignore  README.md
Assets/levels/example/: tags.txt
Assets/libs/config/: defaultprofile.xml
Code/: CMakeLists.txt
Code/GameRules/: GameRules.cpp  GameRules.h
Code/Player/: Player.cpp  Player.h
Solutions/Game.win_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Game.sln  Game.vcxproj  Game.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Solutions/Game.win_x64/Game.dir/RelWithDebInfo/Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Game.lastbuildstate  Game.write.1u.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Solutions/Game.win_x64/RelWithDebInfo/: Game.exp  Game.lib
